8309650: [lworld] Fix mismatch inline type issue during method calls